python/examples/basics/syntax_error.py.out
File "examples/other/syntax_error.py", line 4
    if x > 3
           ^
SyntaxError: invalid syntax

