python/examples/basics/syntax_error.py
x = 2
print(x)

if x > 3

